--- a/android/src/main/res/values/ic_launcher_background.xml
+++ b/android/src/main/res/values/ic_launcher_background.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="ic_launcher_background">#214E78</color>
+    <color name="ic_launcher_background">#FFFFFF</color>
 </resources>
